Abstract placeholders and actions